--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -8,3 +8,10 @@ li {
   height: 100%;
   text-align: center;
 }
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
